tests/e2e/keywords/true_is_keyword.error
Error: syntax error in story at line 1, column 6

1|    true = 1
           ^

E0041: `=` is not allowed here
